@@ -53,18 +53,6 @@
         <finalName>ananya-care-functional-tests-${release.version}</finalName>
         <plugins>
             <plugin>
-              <groupId>org.apache.maven.plugins</groupId>
-              <artifactId>maven-surefire-plugin</artifactId>
-              <version>2.7.2</version>
-              <configuration>
-                  <printSummary>true</printSummary>
-                  <excludes>
-                      <exclude>**/*FunctionalTest.java</exclude>
-                  </excludes>
-              </configuration>
-             </plugin>
-
-            <plugin>
                 <groupId>org.mortbay.jetty</groupId>
                 <artifactId>jetty-maven-plugin</artifactId>
                 <version>8.0.1.v20110908</version>
@@ -104,27 +92,6 @@
                     </execution>
                 </executions>
             </plugin>
-                   <plugin>
-                       <groupId>org.apache.maven.plugins</groupId>
-                       <artifactId>maven-failsafe-plugin</artifactId>
-                       <version>2.9</version>
-                       <executions>
-                           <execution>
-                               <goals>
-                                   <goal>integration-test</goal>
-                                   <goal>verify</goal>
-                               </goals>
-                               <configuration>
-                                   <argLine>-XX:MaxPermSize=1024M</argLine>
-                                   <includes>
-                                       <include>**/*FunctionalTest.java</include>
-                                   </includes>
-                                   <redirectTestOutputToFile>true</redirectTestOutputToFile>
-                               </configuration>
-                           </execution>
-                       </executions>
-                   </plugin>
-
         </plugins>
   </build>
 
